# pulumi

./: .gitignore  README.md
.github/workflows/: utilities-pulumi_state_splitter.yml
utilities/pulumi_state_splitter/: README.md  pylintrc  pyproject.toml  run-tests.sh
utilities/pulumi_state_splitter/pulumi_state_splitter/: __init__.py  __main__.py  backend.py  cli.py  fs.py  main.py  model.py  split.py  state_file.py  stored_state.py
utilities/pulumi_state_splitter/tests/: __init__.py  data.py  test_backend.py  test_cli.py  test_fs.py  test_integration.py  test_main.py  test_model.py  test_split.py  test_state_file.py  test_stored_state.py  test_style.py  util.py
utilities/pulumi_state_splitter/tests/data/multi_stack_split/test-project-1/test-stack-1/: state.yaml
utilities/pulumi_state_splitter/tests/data/multi_stack_split/test-project-1/test-stack-2/: state.yaml
utilities/pulumi_state_splitter/tests/data/multi_stack_split/test-project-2/test-stack-3/: state.yaml
utilities/pulumi_state_splitter/tests/data/multi_stack_unsplit/.pulumi/stacks/test-project-1/: test-stack-1.json  test-stack-2.json
utilities/pulumi_state_splitter/tests/data/multi_stack_unsplit/.pulumi/stacks/test-project-2/: test-stack-3.json
